--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,14 @@
 /* @import url('fontawesome-all.min.css'); */
 /*@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic'); */
 
+body {
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  background-color: rgb(239, 239, 239);
+  overflow-y: scroll;
+}
+
 html,
 body,
 div,
@@ -86,7 +94,6 @@ video {
   padding: 0;
   border: 0;
   font: inherit;
-  vertical-align: baseline;
 }
 
 article,
@@ -144,15 +151,6 @@ input::-moz-focus-inner {
   padding: 0;
 }
 
-input,
-select,
-textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-}
-
 /* Basic */
 
 html {
@@ -198,7 +196,6 @@ a {
   -webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-  border-bottom: dotted 1px #666;
   color: inherit;
   text-decoration: none;
 }
@@ -2164,27 +2161,6 @@ label {
   margin: 0 0 1em 0;
 }
 
-input[type='text'],
-input[type='password'],
-input[type='email'],
-select,
-textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  background: rgba(144, 144, 144, 0.075);
-  border-radius: 4px;
-  border: none;
-  border: solid 1px rgba(144, 144, 144, 0.5);
-  color: inherit;
-  display: block;
-  outline: 0;
-  padding: 0 1em;
-  text-decoration: none;
-  width: 100%;
-}
-
 input[type='text']:invalid,
 input[type='password']:invalid,
 input[type='email']:invalid,
@@ -2233,20 +2209,6 @@ select {
 
 textarea {
   padding: 0.75em 1em;
-}
-
-input[type='checkbox'],
-input[type='radio'] {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  display: block;
-  float: left;
-  margin-right: -2em;
-  opacity: 0;
-  width: 1em;
-  z-index: -1;
 }
 
 input[type='checkbox'] + label,
@@ -2675,7 +2637,6 @@ ul.icons li .icon:before {
 ul.major-icons {
   list-style: none;
   padding-left: 0;
-  
 }
 
 ul.major-icons li {
