--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 body {
   position: fixed;
   width: 100vw;
+  height: 100vh;
   top: 0;
   background-color: rgb(239, 239, 239);
   overflow-y: scroll;
