--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,8 +14,7 @@ html,
 body,
 div,
 span,
-applet,
-object,
+applet object,
 iframe,
 h1,
 h2,
@@ -171,14 +170,14 @@ body {
 body.is-preload *,
 body.is-preload *:before,
 body.is-preload *:after {
-  -moz-animation: none !important;
-  -webkit-animation: none !important;
-  -ms-animation: none !important;
-  animation: none !important;
-  -moz-transition: none !important;
-  -webkit-transition: none !important;
-  -ms-transition: none !important;
-  transition: none !important;
+  -moz-animation: none;
+  -webkit-animation: none;
+  -ms-animation: none;
+  animation: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+  -ms-transition: none;
+  transition: none;
 }
 
 body,
@@ -202,7 +201,7 @@ a {
 }
 
 a:hover {
-  border-bottom-color: transparent !important;
+  border-bottom-color: transparent;
   color: #4883ec;
 }
 
@@ -370,8 +369,8 @@ pre code {
 
 @media screen and (max-width: 980px) {
   .container {
-    max-width: 100% !important;
-    width: 100% !important;
+    max-width: 100%;
+    width: 100%;
   }
 }
 
@@ -2234,7 +2233,7 @@ input[type='radio'] + label:before {
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
-  text-transform: none !important;
+  text-transform: none;
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
 }
@@ -2278,22 +2277,22 @@ input[type='radio'] + label:before {
 }
 
 ::-webkit-input-placeholder {
-  color: #999 !important;
+  color: #999;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: #999 !important;
+  color: #999;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: #999 !important;
+  color: #999;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: #999 !important;
+  color: #999;
   opacity: 1;
 }
 
@@ -2334,7 +2333,7 @@ input[type='radio'] + label:before {
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
-  text-transform: none !important;
+  text-transform: none;
   font-family: 'Font Awesome 5 Free';
   font-weight: 400;
 }
@@ -2348,7 +2347,7 @@ input[type='radio'] + label:before {
 }
 
 .icon.solid:before {
-  font-weight: 900 !important;
+  font-weight: 900;
 }
 
 .icon.brands:before {
@@ -2395,7 +2394,7 @@ input[type='radio'] + label:before {
   font-variant: normal;
   text-rendering: auto;
   line-height: 1;
-  text-transform: none !important;
+  text-transform: none;
   font-family: 'Font Awesome 5 Free';
   font-weight: 400;
 }
@@ -2570,7 +2569,7 @@ ul.actions.fit.stacked {
     -ms-flex-direction: column;
     flex-direction: column;
     margin-left: 0;
-    width: 100% !important;
+    width: 100%;
   }
 
   ul.actions:not(.fixed) li {
@@ -2756,7 +2755,7 @@ button,
   border-radius: 4px;
   border: 0;
   box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
-  color: #555 !important;
+  color: #555;
   cursor: pointer;
   display: inline-block;
   font-size: 0.9em;
@@ -2834,8 +2833,8 @@ input[type='button'].primary,
 button.primary,
 .button.primary {
   background-color: #555;
-  box-shadow: none !important;
-  color: #fff !important;
+  box-shadow: none;
+  color: #fff;
 }
 
 input[type='submit'].primary:hover,
@@ -2919,7 +2918,7 @@ button:disabled,
 .main.style2 button,
 .main.style2 .button {
   box-shadow: inset 0 0 0 1px #ffffff;
-  color: #ffffff !important;
+  color: #ffffff;
 }
 
 .main.style2 input[type='submit']:hover,
@@ -2944,8 +2943,8 @@ button:disabled,
 .main.style2 button.primary,
 .main.style2 .button.primary {
   background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #333 !important;
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #333;
 }
 
 .main.style2 input[type='submit'].primary:hover,
@@ -2953,8 +2952,8 @@ button:disabled,
 .main.style2 input[type='button'].primary:hover,
 .main.style2 button.primary:hover,
 .main.style2 .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.125);
+  color: #ffffff;
 }
 
 .main.style2 input[type='submit'].primary:active,
@@ -2962,7 +2961,7 @@ button:disabled,
 .main.style2 input[type='button'].primary:active,
 .main.style2 button.primary:active,
 .main.style2 .button.primary:active {
-  background-color: rgba(255, 255, 255, 0.25) !important;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .main.style2 ul.major-icons li .icon {
@@ -3020,7 +3019,7 @@ button:disabled,
 #header button,
 #header .button {
   box-shadow: inset 0 0 0 1px #ffffff;
-  color: #ffffff !important;
+  color: #ffffff;
 }
 
 #header input[type='submit']:hover,
@@ -3045,8 +3044,8 @@ button:disabled,
 #header button.primary,
 #header .button.primary {
   background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #4686a0 !important;
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #4686a0;
 }
 
 #header input[type='submit'].primary:hover,
@@ -3054,8 +3053,8 @@ button:disabled,
 #header input[type='button'].primary:hover,
 #header button.primary:hover,
 #header .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.125);
+  color: #ffffff;
 }
 
 #header input[type='submit'].primary:active,
@@ -3063,7 +3062,7 @@ button:disabled,
 #header input[type='button'].primary:active,
 #header button.primary:active,
 #header .button.primary:active {
-  background-color: rgba(255, 255, 255, 0.25) !important;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 #header ul.major-icons li .icon {
@@ -3227,7 +3226,7 @@ body.is-preload #header:after {
 #footer button,
 #footer .button {
   box-shadow: inset 0 0 0 1px #ffffff;
-  color: #ffffff !important;
+  color: #ffffff;
 }
 
 #footer input[type='submit']:hover,
@@ -3252,8 +3251,8 @@ body.is-preload #header:after {
 #footer button.primary,
 #footer .button.primary {
   background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #4686a0 !important;
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #4686a0;
 }
 
 #footer input[type='submit'].primary:hover,
@@ -3261,8 +3260,8 @@ body.is-preload #header:after {
 #footer input[type='button'].primary:hover,
 #footer button.primary:hover,
 #footer .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.125);
+  color: #ffffff;
 }
 
 #footer input[type='submit'].primary:active,
@@ -3270,7 +3269,7 @@ body.is-preload #header:after {
 #footer input[type='button'].primary:active,
 #footer button.primary:active,
 #footer .button.primary:active {
-  background-color: rgba(255, 255, 255, 0.25) !important;
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 #footer ul.major-icons li .icon {
