--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,7 +84,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   vertical-align: baseline;
 }
 
