--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,9 +34,16 @@ body {
   overflow: auto;
 }
 
+dl,
 ol,
 ul {
-  list-style: none;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ol,
+ul {
+  padding-left: 2rem;
 }
 
 blockquote,
