--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600|Noto+Sans+KR:300,400,500,700&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Noto Sans KR', Helvetica, sans-serif;
   vertical-align: baseline;
 }
 
