--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,12 +26,10 @@ section {
 body {
   line-height: 1.65em;
   font-weight: 300;
-  position: fixed;
   width: 100vw;
   height: 100vh;
-  top: 0;
   background-color: rgb(239, 239, 239);
-  overflow: auto;
+  overflow: scroll;
 }
 
 dl,
