--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,13 +23,25 @@ section {
   display: block;
 }
 
+html {
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  @media (max-width: 480px) {
+    display: none;
+  }
+}
+
 body {
   line-height: 1.65em;
   font-weight: 300;
   width: 100vw;
   height: 100vh;
   background-color: rgb(239, 239, 239);
-  overflow: scroll;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 dl,
